--- a/css/style.css
+++ b/css/style.css
@@ -557,73 +557,367 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 }
+
 .static {
 	position: static;
 }
+
 .relative {
 	position: relative;
 }
+
 .absolute {
 	position: absolute;
 }
+
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
+.mx-1 {
+	margin-left: 0.25rem;
+	margin-right: 0.25rem;
+}
+
+.mr-6 {
+	margin-right: 1.5rem;
+}
+
+.mr-8 {
+	margin-right: 2rem;
+}
+
+.mt-6 {
+	margin-top: 1.5rem;
+}
+
+.mt-4 {
+	margin-top: 1rem;
+}
+
+.mb-6 {
+	margin-bottom: 1.5rem;
+}
+
+.mb-8 {
+	margin-bottom: 2rem;
+}
+
 .flex {
 	display: flex;
 }
+
+.block {
+	display: block;
+}
+
+.inline-block {
+	display: inline-block;
+}
+
 .hidden {
 	display: none;
 }
+
 .h-5 {
 	height: 1.25rem;
 }
+
 .h-48 {
 	height: 12rem;
 }
+
 .h-6 {
 	height: 1.5rem;
 }
-.w-5 {
-	width: 1.25rem;
-}
-.w-12 {
-	width: 3rem;
-}
+
 .w-10 {
 	width: 2.5rem;
 }
+
+.w-5 {
+	width: 1.25rem;
+}
+
 .w-full {
 	width: 100%;
 }
+
 .w-6 {
 	width: 1.5rem;
 }
+
+.w-96 {
+	width: 24rem;
+}
+
+.w-1\/2 {
+	width: 50%;
+}
+
+.w-3\/5 {
+	width: 60%;
+}
+
+.w-4\/5 {
+	width: 80%;
+}
+
+.w-11\/12 {
+	width: 91.666667%;
+}
+
+.cursor-pointer {
+	cursor: pointer;
+}
+
 .justify-between {
 	justify-content: space-between;
 }
+
+.rounded {
+	border-radius: 0.25rem;
+}
+
 .bg-indigo-500 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
 }
+
+.bg-indigo-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
+}
+
+.bg-blue-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
+}
+
+.bg-blue-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+}
+
+.bg-blue-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
+}
+
+.bg-indigo-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
+}
+
 .p-3 {
 	padding: 0.75rem;
 }
-.p-6 {
-	padding: 1.5rem;
+
+.py-16 {
+	padding-top: 4rem;
+	padding-bottom: 4rem;
 }
-.text-gray-200 {
+
+.py-24 {
+	padding-top: 6rem;
+	padding-bottom: 6rem;
+}
+
+.px-6 {
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+}
+
+.px-4 {
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+
+.px-12 {
+	padding-left: 3rem;
+	padding-right: 3rem;
+}
+
+.py-6 {
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
+}
+
+.px-10 {
+	padding-left: 2.5rem;
+	padding-right: 2.5rem;
+}
+
+.py-4 {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+}
+
+.pt-24 {
+	padding-top: 6rem;
+}
+
+.pl-12 {
+	padding-left: 3rem;
+}
+
+.pt-44 {
+	padding-top: 11rem;
+}
+
+.pt-96 {
+	padding-top: 24rem;
+}
+
+.pt-72 {
+	padding-top: 18rem;
+}
+
+.pt-56 {
+	padding-top: 14rem;
+}
+
+.pl-16 {
+	padding-left: 4rem;
+}
+
+.pr-4 {
+	padding-right: 1rem;
+}
+
+.pr-8 {
+	padding-right: 2rem;
+}
+
+.pr-12 {
+	padding-right: 3rem;
+}
+
+.pr-20 {
+	padding-right: 5rem;
+}
+
+.align-middle {
+	vertical-align: middle;
+}
+
+.text-lg {
+	font-size: 1.125rem;
+	line-height: 1.75rem;
+}
+
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
+}
+
+.text-6xl {
+	font-size: 3.75rem;
+	line-height: 1;
+}
+
+.text-xl {
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+}
+
+.font-normal {
+	font-weight: 400;
+}
+
+.font-bold {
+	font-weight: 700;
+}
+
+.font-semibold {
+	font-weight: 600;
+}
+
+.font-medium {
+	font-weight: 500;
+}
+
+.text-gray-500 {
 	--tw-text-opacity: 1;
-	color: rgba(229, 231, 235, var(--tw-text-opacity));
+	color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
+
+.text-indigo-900 {
+	--tw-text-opacity: 1;
+	color: rgba(49, 46, 129, var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+
+.text-indigo-800 {
+	--tw-text-opacity: 1;
+	color: rgba(55, 48, 163, var(--tw-text-opacity));
+}
+
 .text-gray-900 {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
-.text-gray-800 {
+
+.text-indigo-700 {
+	--tw-text-opacity: 1;
+	color: rgba(67, 56, 202, var(--tw-text-opacity));
+}
+
+.text-white {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.text-indigo-600 {
+	--tw-text-opacity: 1;
+	color: rgba(79, 70, 229, var(--tw-text-opacity));
+}
+*{
+  font-family: 'Poppins', sans-serif!important;
+}
+.hover\:text-gray-900:hover {
+	--tw-text-opacity: 1;
+	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+.hover\:text-indigo-600:hover {
+	--tw-text-opacity: 1;
+	color: rgba(79, 70, 229, var(--tw-text-opacity));
+}
+.hover\:text-gray-800:hover {
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
 @media (min-width: 768px) {
 
+	.md\:inline-block {
+		display: inline-block;
+	}
+
 	.md\:hidden {
 		display: none;
+	}
+
+	.md\:justify-start {
+		justify-content: flex-start;
+	}
+
+	.md\:py-8 {
+		padding-top: 2rem;
+		padding-bottom: 2rem;
+	}
+
+	.md\:px-12 {
+		padding-left: 3rem;
+		padding-right: 3rem;
 	}
 }
