--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v2.0.4 | MIT License | https://tailwindcss.com *//*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+/*! tailwindcss v2.1.1 | MIT License | https://tailwindcss.com *//*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
 /*
 Document
@@ -537,7 +537,7 @@ object {
 
 /**
  * Constrain images and videos to the parent width and preserve
- * their instrinsic aspect ratio.
+ * their intrinsic aspect ratio.
  *
  * https://github.com/mozdevs/cssremedy/issues/14
  */
@@ -570,19 +570,73 @@ video {
 	position: absolute;
 }
 
+.inset-y-0 {
+	top: 0px;
+	bottom: 0px;
+}
+
+.top-0 {
+	top: 0px;
+}
+
+.right-0 {
+	right: 0px;
+}
+
+.right-6 {
+	right: 1.5rem;
+}
+
+.-right-6 {
+	right: -1.5rem;
+}
+
+.-right-4 {
+	right: -1rem;
+}
+
+.-right-2 {
+	right: -0.5rem;
+}
+
+.-right-1 {
+	right: -0.25rem;
+}
+
+.-right-0 {
+	right: 0px;
+}
+
+.z-\[-1\] {
+	z-index: -1;
+}
+
+.z-10 {
+	z-index: 10;
+}
+
+.z-0 {
+	z-index: 0;
+}
+
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.my-4 {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
-}
-
 .mx-1 {
 	margin-left: 0.25rem;
 	margin-right: 0.25rem;
+}
+
+.my-2 {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
+
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 
 .mr-6 {
@@ -593,24 +647,16 @@ video {
 	margin-right: 2rem;
 }
 
-.mt-6 {
-	margin-top: 1.5rem;
-}
-
 .mt-4 {
 	margin-top: 1rem;
-}
-
-.mb-6 {
-	margin-bottom: 1.5rem;
 }
 
 .mb-8 {
 	margin-bottom: 2rem;
 }
 
-.flex {
-	display: flex;
+.mb-4 {
+	margin-bottom: 1rem;
 }
 
 .block {
@@ -619,6 +665,10 @@ video {
 
 .inline-block {
 	display: inline-block;
+}
+
+.flex {
+	display: flex;
 }
 
 .hidden {
@@ -637,6 +687,74 @@ video {
 	height: 1.5rem;
 }
 
+.h-auto {
+	height: auto;
+}
+
+.h-full {
+	height: 100%;
+}
+
+.h-screen {
+	height: 100vh;
+}
+
+.h-\[vh\] {
+	height: vh;
+}
+
+.h-\[80vh\] {
+	height: 80vh;
+}
+
+.h-\[85vh\] {
+	height: 85vh;
+}
+
+.h-\[86vh\] {
+	height: 86vh;
+}
+
+.h-\[87vh\] {
+	height: 87vh;
+}
+
+.h-\[88vh\] {
+	height: 88vh;
+}
+
+.h-\[87\.5vh\] {
+	height: 87.5vh;
+}
+
+.h-\[86\.5vh\] {
+	height: 86.5vh;
+}
+
+.h-\[86\.8vh\] {
+	height: 86.8vh;
+}
+
+.h-\[86\.9vh\] {
+	height: 86.9vh;
+}
+
+.h-\[86\.95vh\] {
+	height: 86.95vh;
+}
+
+.h-\[86\.99vh\] {
+	height: 86.99vh;
+}
+
+.h-\[87\.1vh\] {
+	height: 87.1vh;
+}
+
+.h-96 {
+	height: 24rem;
+}
+
 .w-10 {
 	width: 2.5rem;
 }
@@ -653,28 +771,93 @@ video {
 	width: 1.5rem;
 }
 
-.w-96 {
-	width: 24rem;
-}
-
 .w-1\/2 {
 	width: 50%;
 }
 
-.w-3\/5 {
-	width: 60%;
+.w-1\/5 {
+	width: 20%;
 }
 
-.w-4\/5 {
-	width: 80%;
+.w-\[80vh\] {
+	width: 80vh;
 }
 
-.w-11\/12 {
-	width: 91.666667%;
+.w-12 {
+	width: 3rem;
+}
+
+.w-48 {
+	width: 12rem;
+}
+
+.w-96 {
+	width: 24rem;
+}
+
+.w-40 {
+	width: 10rem;
+}
+
+.min-w-min {
+	min-width: -webkit-min-content;
+	min-width: -moz-min-content;
+	min-width: min-content;
+}
+
+.max-w-md {
+	max-width: 28rem;
+}
+
+.max-w-lg {
+	max-width: 32rem;
+}
+
+.max-w-xl {
+	max-width: 36rem;
+}
+
+.max-w-2xl {
+	max-width: 42rem;
+}
+
+.max-w-3xl {
+	max-width: 48rem;
+}
+
+.flex-shrink-0 {
+	flex-shrink: 0;
+}
+
+.flex-shrink {
+	flex-shrink: 1;
+}
+
+.transform {
+	--tw-translate-x: 0;
+	--tw-translate-y: 0;
+	--tw-rotate: 0;
+	--tw-skew-x: 0;
+	--tw-skew-y: 0;
+	--tw-scale-x: 1;
+	--tw-scale-y: 1;
+	transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-1\/2 {
+	--tw-translate-x: 50%;
 }
 
 .cursor-pointer {
 	cursor: pointer;
+}
+
+.flex-wrap {
+	flex-wrap: wrap;
+}
+
+.items-center {
+	align-items: center;
 }
 
 .justify-between {
@@ -690,19 +873,9 @@ video {
 	background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
 }
 
-.bg-indigo-700 {
+.bg-indigo-600 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
-}
-
-.bg-blue-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
-}
-
-.bg-blue-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
 }
 
 .bg-blue-100 {
@@ -710,43 +883,17 @@ video {
 	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
 
-.bg-indigo-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
+.object-cover {
+	-o-object-fit: cover;
+	   object-fit: cover;
 }
 
 .p-3 {
 	padding: 0.75rem;
 }
 
-.py-16 {
-	padding-top: 4rem;
-	padding-bottom: 4rem;
-}
-
-.py-24 {
-	padding-top: 6rem;
-	padding-bottom: 6rem;
-}
-
-.px-6 {
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
-}
-
-.px-4 {
-	padding-left: 1rem;
-	padding-right: 1rem;
-}
-
-.px-12 {
-	padding-left: 3rem;
-	padding-right: 3rem;
-}
-
-.py-6 {
-	padding-top: 1.5rem;
-	padding-bottom: 1.5rem;
+.p-4 {
+	padding: 1rem;
 }
 
 .px-10 {
@@ -759,48 +906,64 @@ video {
 	padding-bottom: 1rem;
 }
 
-.pt-24 {
-	padding-top: 6rem;
+.py-44 {
+	padding-top: 11rem;
+	padding-bottom: 11rem;
 }
 
-.pl-12 {
-	padding-left: 3rem;
+.py-10 {
+	padding-top: 2.5rem;
+	padding-bottom: 2.5rem;
+}
+
+.px-4 {
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+
+.py-6 {
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 }
 
 .pt-44 {
 	padding-top: 11rem;
 }
 
-.pt-96 {
-	padding-top: 24rem;
-}
-
-.pt-72 {
-	padding-top: 18rem;
-}
-
-.pt-56 {
-	padding-top: 14rem;
-}
-
 .pl-16 {
 	padding-left: 4rem;
 }
 
-.pr-4 {
-	padding-right: 1rem;
+.pr-20 {
+	padding-right: 5rem;
+}
+
+.pt-4 {
+	padding-top: 1rem;
+}
+
+.pt-40 {
+	padding-top: 10rem;
+}
+
+.pr-6 {
+	padding-right: 1.5rem;
 }
 
 .pr-8 {
 	padding-right: 2rem;
 }
 
-.pr-12 {
-	padding-right: 3rem;
+.pr-10 {
+	padding-right: 2.5rem;
 }
 
-.pr-20 {
-	padding-right: 5rem;
+.pt-10 {
+	padding-top: 2.5rem;
+}
+
+.text-center {
+	text-align: center;
 }
 
 .align-middle {
@@ -810,11 +973,6 @@ video {
 .text-lg {
 	font-size: 1.125rem;
 	line-height: 1.75rem;
-}
-
-.text-4xl {
-	font-size: 2.25rem;
-	line-height: 2.5rem;
 }
 
 .text-6xl {
@@ -827,16 +985,27 @@ video {
 	line-height: 1.75rem;
 }
 
+.text-base {
+	font-size: 1rem;
+	line-height: 1.5rem;
+}
+
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
+}
+
+.text-5xl {
+	font-size: 3rem;
+	line-height: 1;
+}
+
 .font-normal {
 	font-weight: 400;
 }
 
 .font-bold {
 	font-weight: 700;
-}
-
-.font-semibold {
-	font-weight: 600;
 }
 
 .font-medium {
@@ -848,19 +1017,14 @@ video {
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 
-.text-indigo-900 {
+.text-indigo-800 {
 	--tw-text-opacity: 1;
-	color: rgba(49, 46, 129, var(--tw-text-opacity));
+	color: rgba(55, 48, 163, var(--tw-text-opacity));
 }
 
 .text-gray-600 {
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
-
-.text-indigo-800 {
-	--tw-text-opacity: 1;
-	color: rgba(55, 48, 163, var(--tw-text-opacity));
 }
 
 .text-gray-900 {
@@ -877,13 +1041,16 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
-
-.text-indigo-600 {
-	--tw-text-opacity: 1;
-	color: rgba(79, 70, 229, var(--tw-text-opacity));
-}
 *{
   font-family: 'Poppins', sans-serif!important;
+}
+.hover\:bg-indigo-700:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
+}
+.hover\:bg-blue-200:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
 }
 .hover\:text-gray-900:hover {
 	--tw-text-opacity: 1;
@@ -907,6 +1074,22 @@ video {
 		display: none;
 	}
 
+	.md\:w-14 {
+		width: 3.5rem;
+	}
+
+	.md\:w-20 {
+		width: 5rem;
+	}
+
+	.md\:w-40 {
+		width: 10rem;
+	}
+
+	.md\:w-auto {
+		width: auto;
+	}
+
 	.md\:justify-start {
 		justify-content: flex-start;
 	}
@@ -919,5 +1102,60 @@ video {
 	.md\:px-12 {
 		padding-left: 3rem;
 		padding-right: 3rem;
+	}
+
+	.md\:py-20 {
+		padding-top: 5rem;
+		padding-bottom: 5rem;
+	}
+
+	.md\:pt-44 {
+		padding-top: 11rem;
+	}
+
+	.md\:text-center {
+		text-align: center;
+	}
+
+	.md\:text-6xl {
+		font-size: 3.75rem;
+		line-height: 1;
+	}
+}
+@media (min-width: 1024px) {
+
+	.lg\:block {
+		display: block;
+	}
+
+	.lg\:h-full {
+		height: 100%;
+	}
+
+	.lg\:w-1\/2 {
+		width: 50%;
+	}
+
+	.lg\:pt-44 {
+		padding-top: 11rem;
+	}
+
+	.lg\:pl-16 {
+		padding-left: 4rem;
+	}
+
+	.lg\:text-lg {
+		font-size: 1.125rem;
+		line-height: 1.75rem;
+	}
+
+	.lg\:text-6xl {
+		font-size: 3.75rem;
+		line-height: 1;
+	}
+
+	.lg\:text-xl {
+		font-size: 1.25rem;
+		line-height: 1.75rem;
 	}
 }
