--- a/css/style.css
+++ b/css/style.css
@@ -575,40 +575,12 @@ video {
 	bottom: 0px;
 }
 
-.top-0 {
-	top: 0px;
-}
-
-.right-0 {
-	right: 0px;
-}
-
-.right-6 {
-	right: 1.5rem;
-}
-
-.-right-6 {
-	right: -1.5rem;
-}
-
-.-right-4 {
-	right: -1rem;
-}
-
-.-right-2 {
-	right: -0.5rem;
-}
-
-.-right-1 {
-	right: -0.25rem;
-}
-
 .-right-0 {
 	right: 0px;
 }
 
-.z-\[-1\] {
-	z-index: -1;
+.top-0 {
+	top: 0px;
 }
 
 .z-10 {
@@ -624,9 +596,9 @@ video {
 	margin-right: auto;
 }
 
-.mx-1 {
-	margin-left: 0.25rem;
-	margin-right: 0.25rem;
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 
 .my-2 {
@@ -634,9 +606,14 @@ video {
 	margin-bottom: 0.5rem;
 }
 
-.my-4 {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
+.mx-1 {
+	margin-left: 0.25rem;
+	margin-right: 0.25rem;
+}
+
+.my-6 {
+	margin-top: 1.5rem;
+	margin-bottom: 1.5rem;
 }
 
 .mr-6 {
@@ -647,16 +624,24 @@ video {
 	margin-right: 2rem;
 }
 
-.mt-4 {
-	margin-top: 1rem;
+.mb-2 {
+	margin-bottom: 0.5rem;
 }
 
-.mb-8 {
-	margin-bottom: 2rem;
+.ml-20 {
+	margin-left: 5rem;
 }
 
 .mb-4 {
 	margin-bottom: 1rem;
+}
+
+.mb-6 {
+	margin-bottom: 1.5rem;
+}
+
+.ml-16 {
+	margin-left: 4rem;
 }
 
 .block {
@@ -687,76 +672,24 @@ video {
 	height: 1.5rem;
 }
 
-.h-auto {
-	height: auto;
+.h-\[87\.1vh\] {
+	height: 87.1vh;
 }
 
 .h-full {
 	height: 100%;
 }
 
-.h-screen {
-	height: 100vh;
-}
-
-.h-\[vh\] {
-	height: vh;
-}
-
-.h-\[80vh\] {
-	height: 80vh;
-}
-
-.h-\[85vh\] {
-	height: 85vh;
-}
-
-.h-\[86vh\] {
-	height: 86vh;
-}
-
-.h-\[87vh\] {
-	height: 87vh;
-}
-
-.h-\[88vh\] {
-	height: 88vh;
-}
-
-.h-\[87\.5vh\] {
-	height: 87.5vh;
-}
-
-.h-\[86\.5vh\] {
-	height: 86.5vh;
-}
-
-.h-\[86\.8vh\] {
-	height: 86.8vh;
-}
-
-.h-\[86\.9vh\] {
-	height: 86.9vh;
-}
-
-.h-\[86\.95vh\] {
-	height: 86.95vh;
-}
-
-.h-\[86\.99vh\] {
-	height: 86.99vh;
-}
-
-.h-\[87\.1vh\] {
-	height: 87.1vh;
-}
-
 .h-96 {
 	height: 24rem;
 }
 
-.w-10 {
-	width: 2.5rem;
+.h-auto {
+	height: auto;
+}
+
+.w-8 {
+	width: 2rem;
 }
 
 .w-5 {
@@ -771,38 +704,42 @@ video {
 	width: 1.5rem;
 }
 
-.w-1\/2 {
-	width: 50%;
-}
-
-.w-1\/5 {
-	width: 20%;
-}
-
-.w-\[80vh\] {
-	width: 80vh;
-}
-
-.w-12 {
-	width: 3rem;
-}
-
-.w-48 {
-	width: 12rem;
+.w-40 {
+	width: 10rem;
 }
 
 .w-96 {
 	width: 24rem;
 }
 
-.w-40 {
-	width: 10rem;
+.w-auto {
+	width: auto;
+}
+
+.w-12 {
+	width: 3rem;
+}
+
+.w-1\/2 {
+	width: 50%;
+}
+
+.w-10 {
+	width: 2.5rem;
 }
 
 .min-w-min {
 	min-width: -webkit-min-content;
 	min-width: -moz-min-content;
 	min-width: min-content;
+}
+
+.min-w-\[366\] {
+	min-width: 366;
+}
+
+.min-w-\[366px\] {
+	min-width: 366px;
 }
 
 .max-w-md {
@@ -852,6 +789,10 @@ video {
 	cursor: pointer;
 }
 
+.flex-col {
+	flex-direction: column;
+}
+
 .flex-wrap {
 	flex-wrap: wrap;
 }
@@ -883,22 +824,26 @@ video {
 	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
 
+.bg-indigo-800 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 48, 163, var(--tw-bg-opacity));
+}
+
 .object-cover {
 	-o-object-fit: cover;
 	   object-fit: cover;
+}
+
+.p-2 {
+	padding: 0.5rem;
 }
 
 .p-3 {
 	padding: 0.75rem;
 }
 
-.p-4 {
-	padding: 1rem;
-}
-
-.px-10 {
-	padding-left: 2.5rem;
-	padding-right: 2.5rem;
+.p-1 {
+	padding: 0.25rem;
 }
 
 .py-4 {
@@ -906,19 +851,14 @@ video {
 	padding-bottom: 1rem;
 }
 
-.py-44 {
-	padding-top: 11rem;
-	padding-bottom: 11rem;
-}
-
-.py-10 {
-	padding-top: 2.5rem;
-	padding-bottom: 2.5rem;
-}
-
 .px-4 {
 	padding-left: 1rem;
 	padding-right: 1rem;
+}
+
+.px-10 {
+	padding-left: 2.5rem;
+	padding-right: 2.5rem;
 }
 
 .py-6 {
@@ -926,63 +866,43 @@ video {
 	padding-bottom: 1.5rem;
 }
 
-.pt-44 {
-	padding-top: 11rem;
+.py-12 {
+	padding-top: 3rem;
+	padding-bottom: 3rem;
 }
 
-.pl-16 {
-	padding-left: 4rem;
-}
-
-.pr-20 {
-	padding-right: 5rem;
-}
-
-.pt-4 {
-	padding-top: 1rem;
-}
-
-.pt-40 {
-	padding-top: 10rem;
-}
-
-.pr-6 {
-	padding-right: 1.5rem;
-}
-
-.pr-8 {
+.px-8 {
+	padding-left: 2rem;
 	padding-right: 2rem;
 }
 
-.pr-10 {
-	padding-right: 2.5rem;
+.px-2 {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
 }
 
 .pt-10 {
 	padding-top: 2.5rem;
 }
 
+.pr-10 {
+	padding-right: 2.5rem;
+}
+
+.pr-20 {
+	padding-right: 5rem;
+}
+
 .text-center {
 	text-align: center;
 }
 
+.text-left {
+	text-align: left;
+}
+
 .align-middle {
 	vertical-align: middle;
-}
-
-.text-lg {
-	font-size: 1.125rem;
-	line-height: 1.75rem;
-}
-
-.text-6xl {
-	font-size: 3.75rem;
-	line-height: 1;
-}
-
-.text-xl {
-	font-size: 1.25rem;
-	line-height: 1.75rem;
 }
 
 .text-base {
@@ -990,14 +910,39 @@ video {
 	line-height: 1.5rem;
 }
 
+.text-5xl {
+	font-size: 3rem;
+	line-height: 1;
+}
+
+.text-lg {
+	font-size: 1.125rem;
+	line-height: 1.75rem;
+}
+
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
+
 .text-4xl {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
 }
 
-.text-5xl {
-	font-size: 3rem;
-	line-height: 1;
+.text-xl {
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+}
+
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
+
+.text-sm {
+	font-size: 0.875rem;
+	line-height: 1.25rem;
 }
 
 .font-normal {
@@ -1010,6 +955,10 @@ video {
 
 .font-medium {
 	font-weight: 500;
+}
+
+.font-semibold {
+	font-weight: 600;
 }
 
 .text-gray-500 {
@@ -1040,6 +989,16 @@ video {
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.text-indigo-500 {
+	--tw-text-opacity: 1;
+	color: rgba(99, 102, 241, var(--tw-text-opacity));
+}
+
+.text-gray-400 {
+	--tw-text-opacity: 1;
+	color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
 *{
   font-family: 'Poppins', sans-serif!important;
@@ -1074,20 +1033,16 @@ video {
 		display: none;
 	}
 
-	.md\:w-14 {
-		width: 3.5rem;
-	}
-
-	.md\:w-20 {
-		width: 5rem;
-	}
-
-	.md\:w-40 {
-		width: 10rem;
-	}
-
 	.md\:w-auto {
 		width: auto;
+	}
+
+	.md\:w-1\/2 {
+		width: 50%;
+	}
+
+	.md\:flex-row {
+		flex-direction: row;
 	}
 
 	.md\:justify-start {
@@ -1109,17 +1064,28 @@ video {
 		padding-bottom: 5rem;
 	}
 
-	.md\:pt-44 {
-		padding-top: 11rem;
-	}
-
-	.md\:text-center {
-		text-align: center;
-	}
-
 	.md\:text-6xl {
 		font-size: 3.75rem;
 		line-height: 1;
+	}
+
+	.md\:text-5xl {
+		font-size: 3rem;
+		line-height: 1;
+	}
+
+	.md\:text-base {
+		font-size: 1rem;
+		line-height: 1.5rem;
+	}
+
+	.md\:text-lg {
+		font-size: 1.125rem;
+		line-height: 1.75rem;
+	}
+
+	.md\:font-semibold {
+		font-weight: 600;
 	}
 }
 @media (min-width: 1024px) {
@@ -1130,6 +1096,10 @@ video {
 
 	.lg\:h-full {
 		height: 100%;
+	}
+
+	.lg\:h-\[87\.1vh\] {
+		height: 87.1vh;
 	}
 
 	.lg\:w-1\/2 {
@@ -1147,11 +1117,6 @@ video {
 	.lg\:text-lg {
 		font-size: 1.125rem;
 		line-height: 1.75rem;
-	}
-
-	.lg\:text-6xl {
-		font-size: 3.75rem;
-		line-height: 1;
 	}
 
 	.lg\:text-xl {
