--- a/css/style.css
+++ b/css/style.css
@@ -583,6 +583,18 @@ video {
 	top: 0px;
 }
 
+.top-3 {
+	top: 0.75rem;
+}
+
+.top-1 {
+	top: 0.25rem;
+}
+
+.top-2 {
+	top: 0.5rem;
+}
+
 .z-10 {
 	z-index: 10;
 }
@@ -616,19 +628,14 @@ video {
 	margin-bottom: 1.5rem;
 }
 
-.mx-8 {
-	margin-left: 2rem;
-	margin-right: 2rem;
+.mx-4 {
+	margin-left: 1rem;
+	margin-right: 1rem;
 }
 
 .my-8 {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
-}
-
-.mx-4 {
-	margin-left: 1rem;
-	margin-right: 1rem;
 }
 
 .mr-6 {
@@ -637,6 +644,10 @@ video {
 
 .mr-8 {
 	margin-right: 2rem;
+}
+
+.mt-2 {
+	margin-top: 0.5rem;
 }
 
 .mb-2 {
@@ -655,12 +666,28 @@ video {
 	margin-bottom: 1.5rem;
 }
 
+.mt-4 {
+	margin-top: 1rem;
+}
+
+.mr-2 {
+	margin-right: 0.5rem;
+}
+
+.ml-8 {
+	margin-left: 2rem;
+}
+
 .block {
 	display: block;
 }
 
 .inline-block {
 	display: inline-block;
+}
+
+.inline {
+	display: inline;
 }
 
 .flex {
@@ -695,10 +722,6 @@ video {
 	height: 24rem;
 }
 
-.h-screen {
-	height: 100vh;
-}
-
 .w-8 {
 	width: 2rem;
 }
@@ -727,16 +750,16 @@ video {
 	width: 2.5rem;
 }
 
+.w-4 {
+	width: 1rem;
+}
+
 .max-w-3xl {
 	max-width: 48rem;
 }
 
 .max-w-xl {
 	max-width: 36rem;
-}
-
-.max-w-lg {
-	max-width: 32rem;
 }
 
 .max-w-2xl {
@@ -794,6 +817,19 @@ video {
 	border-radius: 0.375rem;
 }
 
+.border-2 {
+	border-width: 2px;
+}
+
+.border {
+	border-width: 1px;
+}
+
+.border-gray-300 {
+	--tw-border-opacity: 1;
+	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
+
 .bg-indigo-500 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
@@ -809,9 +845,9 @@ video {
 	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
 
-.bg-indigo-800 {
+.bg-indigo-700 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(55, 48, 163, var(--tw-bg-opacity));
+	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -819,9 +855,19 @@ video {
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
-.bg-indigo-700 {
+.bg-gray-200 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+
+.bg-gray-800 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
+
+.bg-indigo-800 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 48, 163, var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -831,14 +877,6 @@ video {
 
 .p-2 {
 	padding: 0.5rem;
-}
-
-.p-8 {
-	padding: 2rem;
-}
-
-.p-4 {
-	padding: 1rem;
 }
 
 .py-4 {
@@ -871,19 +909,9 @@ video {
 	padding-right: 0.5rem;
 }
 
-.py-8 {
-	padding-top: 2rem;
-	padding-bottom: 2rem;
-}
-
-.py-2 {
-	padding-top: 0.5rem;
-	padding-bottom: 0.5rem;
-}
-
-.px-6 {
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
+.py-10 {
+	padding-top: 2.5rem;
+	padding-bottom: 2.5rem;
 }
 
 .py-3 {
@@ -896,9 +924,19 @@ video {
 	padding-right: 1.25rem;
 }
 
-.py-10 {
-	padding-top: 2.5rem;
-	padding-bottom: 2.5rem;
+.py-2 {
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+}
+
+.py-20 {
+	padding-top: 5rem;
+	padding-bottom: 5rem;
+}
+
+.px-1 {
+	padding-left: 0.25rem;
+	padding-right: 0.25rem;
 }
 
 .pt-10 {
@@ -922,6 +960,11 @@ video {
 	line-height: 1.5rem;
 }
 
+.text-5xl {
+	font-size: 3rem;
+	line-height: 1;
+}
+
 .text-4xl {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
@@ -930,6 +973,21 @@ video {
 .text-lg {
 	font-size: 1.125rem;
 	line-height: 1.75rem;
+}
+
+.text-sm {
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+}
+
+.text-xl {
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+}
+
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
 }
 
 .text-3xl {
@@ -983,42 +1041,19 @@ video {
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
-.text-gray-300 {
-	--tw-text-opacity: 1;
-	color: rgba(209, 213, 219, var(--tw-text-opacity));
-}
-
-.text-gray-200 {
-	--tw-text-opacity: 1;
-	color: rgba(229, 231, 235, var(--tw-text-opacity));
-}
-
-.text-gray-100 {
-	--tw-text-opacity: 1;
-	color: rgba(243, 244, 246, var(--tw-text-opacity));
-}
-
-.text-gray-50 {
-	--tw-text-opacity: 1;
-	color: rgba(249, 250, 251, var(--tw-text-opacity));
-}
-
 .text-indigo-600 {
 	--tw-text-opacity: 1;
 	color: rgba(79, 70, 229, var(--tw-text-opacity));
 }
 
-.text-indigo-500 {
+.text-gray-700 {
 	--tw-text-opacity: 1;
-	color: rgba(99, 102, 241, var(--tw-text-opacity));
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
 
-.text-opacity-70 {
-	--tw-text-opacity: 0.7;
-}
-
-.text-opacity-50 {
-	--tw-text-opacity: 0.5;
+.text-gray-800 {
+	--tw-text-opacity: 1;
+	color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
 
 .text-opacity-80 {
@@ -1059,6 +1094,17 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(67, 56, 202, var(--tw-text-opacity));
 }
+@media (min-width: 640px) {
+
+	.sm\:w-1\/2 {
+		width: 50%;
+	}
+
+	.sm\:px-4 {
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
+}
 @media (min-width: 768px) {
 
 	.md\:mx-8 {
@@ -1080,6 +1126,10 @@ video {
 
 	.md\:w-1\/2 {
 		width: 50%;
+	}
+
+	.md\:w-full {
+		width: 100%;
 	}
 
 	.md\:flex-row {
@@ -1110,24 +1160,29 @@ video {
 		padding-right: 2rem;
 	}
 
-	.md\:py-12 {
-		padding-top: 3rem;
-		padding-bottom: 3rem;
-	}
-
 	.md\:py-16 {
 		padding-top: 4rem;
 		padding-bottom: 4rem;
 	}
 
-	.md\:px-16 {
-		padding-left: 4rem;
-		padding-right: 4rem;
-	}
-
 	.md\:px-20 {
 		padding-left: 5rem;
 		padding-right: 5rem;
+	}
+
+	.md\:py-12 {
+		padding-top: 3rem;
+		padding-bottom: 3rem;
+	}
+
+	.md\:px-6 {
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
+
+	.md\:px-4 {
+		padding-left: 1rem;
+		padding-right: 1rem;
 	}
 
 	.md\:pr-10 {
@@ -1153,8 +1208,22 @@ video {
 		line-height: 1;
 	}
 
+	.md\:text-xl {
+		font-size: 1.25rem;
+		line-height: 1.75rem;
+	}
+
+	.md\:text-4xl {
+		font-size: 2.25rem;
+		line-height: 2.5rem;
+	}
+
 	.md\:font-semibold {
 		font-weight: 600;
+	}
+
+	.md\:font-bold {
+		font-weight: 700;
 	}
 }
 @media (min-width: 1024px) {
@@ -1173,6 +1242,10 @@ video {
 
 	.lg\:w-1\/2 {
 		width: 50%;
+	}
+
+	.lg\:w-1\/4 {
+		width: 25%;
 	}
 
 	.lg\:pt-44 {
