--- a/css/style.css
+++ b/css/style.css
@@ -583,14 +583,6 @@ video {
 	top: 0px;
 }
 
-.top-3 {
-	top: 0.75rem;
-}
-
-.top-1 {
-	top: 0.25rem;
-}
-
 .top-2 {
 	top: 0.5rem;
 }
@@ -670,12 +662,12 @@ video {
 	margin-top: 1rem;
 }
 
-.mr-2 {
-	margin-right: 0.5rem;
-}
-
 .ml-8 {
 	margin-left: 2rem;
+}
+
+.mr-2 {
+	margin-right: 0.5rem;
 }
 
 .block {
@@ -754,6 +746,10 @@ video {
 	width: 1rem;
 }
 
+.max-w-6xl {
+	max-width: 72rem;
+}
+
 .max-w-3xl {
 	max-width: 48rem;
 }
@@ -764,6 +760,10 @@ video {
 
 .max-w-2xl {
 	max-width: 42rem;
+}
+
+.max-w-screen-2xl {
+	max-width: 1536px;
 }
 
 .flex-shrink-0 {
@@ -860,16 +860,6 @@ video {
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
-.bg-gray-800 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
-}
-
-.bg-indigo-800 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(55, 48, 163, var(--tw-bg-opacity));
-}
-
 .object-cover {
 	-o-object-fit: cover;
 	   object-fit: cover;
@@ -934,11 +924,6 @@ video {
 	padding-bottom: 5rem;
 }
 
-.px-1 {
-	padding-left: 0.25rem;
-	padding-right: 0.25rem;
-}
-
 .py-8 {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
@@ -980,24 +965,19 @@ video {
 	line-height: 1.75rem;
 }
 
-.text-sm {
-	font-size: 0.875rem;
-	line-height: 1.25rem;
-}
-
 .text-xl {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
 
-.text-2xl {
-	font-size: 1.5rem;
-	line-height: 2rem;
-}
-
 .text-3xl {
 	font-size: 1.875rem;
 	line-height: 2.25rem;
+}
+
+.text-sm {
+	font-size: 0.875rem;
+	line-height: 1.25rem;
 }
 
 .font-normal {
@@ -1121,6 +1101,10 @@ video {
 		margin-right: 2rem;
 	}
 
+	.md\:block {
+		display: block;
+	}
+
 	.md\:inline-block {
 		display: inline-block;
 	}
@@ -1187,11 +1171,6 @@ video {
 	.md\:px-6 {
 		padding-left: 1.5rem;
 		padding-right: 1.5rem;
-	}
-
-	.md\:px-4 {
-		padding-left: 1rem;
-		padding-right: 1rem;
 	}
 
 	.md\:pr-10 {
@@ -1273,5 +1252,12 @@ video {
 	.lg\:text-xl {
 		font-size: 1.25rem;
 		line-height: 1.75rem;
+	}
+}
+@media (min-width: 1280px) {
+
+	.xl\:mx-auto {
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
