--- a/css/style.css
+++ b/css/style.css
@@ -595,6 +595,14 @@ video {
 	z-index: 0;
 }
 
+.m-4 {
+	margin: 1rem;
+}
+
+.m-2 {
+	margin: 0.5rem;
+}
+
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -628,6 +636,11 @@ video {
 .my-8 {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
+}
+
+.mx-3 {
+	margin-left: 0.75rem;
+	margin-right: 0.75rem;
 }
 
 .mr-6 {
@@ -668,6 +681,18 @@ video {
 
 .mr-2 {
 	margin-right: 0.5rem;
+}
+
+.mb-8 {
+	margin-bottom: 2rem;
+}
+
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
+
+.mb-1 {
+	margin-bottom: 0.25rem;
 }
 
 .block {
@@ -746,6 +771,26 @@ video {
 	width: 1rem;
 }
 
+.w-96 {
+	width: 24rem;
+}
+
+.w-64 {
+	width: 16rem;
+}
+
+.w-48 {
+	width: 12rem;
+}
+
+.w-32 {
+	width: 8rem;
+}
+
+.w-12 {
+	width: 3rem;
+}
+
 .max-w-6xl {
 	max-width: 72rem;
 }
@@ -793,6 +838,10 @@ video {
 	cursor: pointer;
 }
 
+.list-none {
+	list-style-type: none;
+}
+
 .flex-col {
 	flex-direction: column;
 }
@@ -825,9 +874,27 @@ video {
 	border-width: 1px;
 }
 
+.border-t-2 {
+	border-top-width: 2px;
+}
+
+.border-b-2 {
+	border-bottom-width: 2px;
+}
+
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
+
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+}
+
+.border-gray-200 {
+	--tw-border-opacity: 1;
+	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
 
 .bg-indigo-500 {
@@ -858,6 +925,10 @@ video {
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+
+.fill-current {
+	fill: currentColor;
 }
 
 .object-cover {
@@ -927,6 +998,16 @@ video {
 .py-8 {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
+}
+
+.px-0\.5 {
+	padding-left: 0.125rem;
+	padding-right: 0.125rem;
+}
+
+.px-0 {
+	padding-left: 0px;
+	padding-right: 0px;
 }
 
 .pt-10 {
@@ -1041,6 +1122,11 @@ video {
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
 
+.text-gray-400 {
+	--tw-text-opacity: 1;
+	color: rgba(156, 163, 175, var(--tw-text-opacity));
+}
+
 .text-opacity-80 {
 	--tw-text-opacity: 0.8;
 }
@@ -1083,7 +1169,20 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(67, 56, 202, var(--tw-text-opacity));
 }
+.hover\:text-gray-600:hover {
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+.hover\:text-gray-700:hover {
+	--tw-text-opacity: 1;
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
 @media (min-width: 640px) {
+
+	.sm\:mx-8 {
+		margin-left: 2rem;
+		margin-right: 2rem;
+	}
 
 	.sm\:w-1\/2 {
 		width: 50%;
@@ -1096,9 +1195,23 @@ video {
 }
 @media (min-width: 768px) {
 
+	.md\:m-4 {
+		margin: 1rem;
+	}
+
 	.md\:mx-8 {
 		margin-left: 2rem;
 		margin-right: 2rem;
+	}
+
+	.md\:mx-2 {
+		margin-left: 0.5rem;
+		margin-right: 0.5rem;
+	}
+
+	.md\:mx-3 {
+		margin-left: 0.75rem;
+		margin-right: 0.75rem;
 	}
 
 	.md\:block {
@@ -1234,6 +1347,10 @@ video {
 
 	.lg\:w-1\/4 {
 		width: 25%;
+	}
+
+	.lg\:justify-between {
+		justify-content: space-between;
 	}
 
 	.lg\:pt-44 {
