--- a/css/style.css
+++ b/css/style.css
@@ -587,16 +587,44 @@ video {
 	top: 0.5rem;
 }
 
+.right-0 {
+	right: 0px;
+}
+
+.right-1 {
+	right: 0.25rem;
+}
+
+.top-1 {
+	top: 0.25rem;
+}
+
+.right-2 {
+	right: 0.5rem;
+}
+
+.right-1\.5 {
+	right: 0.375rem;
+}
+
+.right-0\.5 {
+	right: 0.125rem;
+}
+
+.right-3 {
+	right: 0.75rem;
+}
+
+.right-5 {
+	right: 1.25rem;
+}
+
 .z-10 {
 	z-index: 10;
 }
 
 .z-0 {
 	z-index: 0;
-}
-
-.m-4 {
-	margin: 1rem;
 }
 
 .m-2 {
@@ -641,6 +669,11 @@ video {
 .mx-3 {
 	margin-left: 0.75rem;
 	margin-right: 0.75rem;
+}
+
+.mx-2 {
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
 }
 
 .mr-6 {
@@ -695,6 +728,22 @@ video {
 	margin-bottom: 0.25rem;
 }
 
+.ml-0\.5 {
+	margin-left: 0.125rem;
+}
+
+.ml-0 {
+	margin-left: 0px;
+}
+
+.-ml-0\.5 {
+	margin-left: -0.125rem;
+}
+
+.-ml-0 {
+	margin-left: 0px;
+}
+
 .block {
 	display: block;
 }
@@ -739,8 +788,12 @@ video {
 	height: 24rem;
 }
 
-.w-8 {
-	width: 2rem;
+.h-8 {
+	height: 2rem;
+}
+
+.w-12 {
+	width: 3rem;
 }
 
 .w-5 {
@@ -775,24 +828,36 @@ video {
 	width: 24rem;
 }
 
-.w-64 {
-	width: 16rem;
-}
-
-.w-48 {
-	width: 12rem;
-}
-
 .w-32 {
 	width: 8rem;
 }
 
-.w-12 {
-	width: 3rem;
+.w-8 {
+	width: 2rem;
 }
 
-.max-w-6xl {
-	max-width: 72rem;
+.w-20 {
+	width: 5rem;
+}
+
+.w-\[90\%\] {
+	width: 90%;
+}
+
+.w-\[98\%\] {
+	width: 98%;
+}
+
+.w-\[95\%\] {
+	width: 95%;
+}
+
+.w-\[97\%\] {
+	width: 97%;
+}
+
+.max-w-screen-2xl {
+	max-width: 1536px;
 }
 
 .max-w-3xl {
@@ -805,10 +870,6 @@ video {
 
 .max-w-2xl {
 	max-width: 42rem;
-}
-
-.max-w-screen-2xl {
-	max-width: 1536px;
 }
 
 .flex-shrink-0 {
@@ -878,18 +939,9 @@ video {
 	border-top-width: 2px;
 }
 
-.border-b-2 {
-	border-bottom-width: 2px;
-}
-
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-
-.border-gray-400 {
-	--tw-border-opacity: 1;
-	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 
 .border-gray-200 {
@@ -927,6 +979,15 @@ video {
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
+.bg-gray-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+	background-color: transparent;
+}
+
 .fill-current {
 	fill: currentColor;
 }
@@ -940,6 +1001,14 @@ video {
 	padding: 0.5rem;
 }
 
+.p-1 {
+	padding: 0.25rem;
+}
+
+.p-4 {
+	padding: 1rem;
+}
+
 .py-4 {
 	padding-top: 1rem;
 	padding-bottom: 1rem;
@@ -948,6 +1017,11 @@ video {
 .px-4 {
 	padding-left: 1rem;
 	padding-right: 1rem;
+}
+
+.py-10 {
+	padding-top: 2.5rem;
+	padding-bottom: 2.5rem;
 }
 
 .px-10 {
@@ -968,11 +1042,6 @@ video {
 .px-2 {
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
-}
-
-.py-10 {
-	padding-top: 2.5rem;
-	padding-bottom: 2.5rem;
 }
 
 .py-3 {
@@ -1000,6 +1069,21 @@ video {
 	padding-bottom: 2rem;
 }
 
+.py-1 {
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+}
+
+.px-1\.5 {
+	padding-left: 0.375rem;
+	padding-right: 0.375rem;
+}
+
+.px-1 {
+	padding-left: 0.25rem;
+	padding-right: 0.25rem;
+}
+
 .px-0\.5 {
 	padding-left: 0.125rem;
 	padding-right: 0.125rem;
@@ -1010,8 +1094,18 @@ video {
 	padding-right: 0px;
 }
 
-.pt-10 {
-	padding-top: 2.5rem;
+.px-3 {
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+}
+
+.px-2\.5 {
+	padding-left: 0.625rem;
+	padding-right: 0.625rem;
+}
+
+.pb-4 {
+	padding-bottom: 1rem;
 }
 
 .text-center {
@@ -1127,6 +1221,11 @@ video {
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
 
+.text-indigo-500 {
+	--tw-text-opacity: 1;
+	color: rgba(99, 102, 241, var(--tw-text-opacity));
+}
+
 .text-opacity-80 {
 	--tw-text-opacity: 0.8;
 }
@@ -1134,8 +1233,32 @@ video {
 .text-opacity-90 {
 	--tw-text-opacity: 0.9;
 }
+
+.shadow-sm {
+	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow {
+	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-inner {
+	--tw-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 *{
   font-family: 'Poppins', sans-serif!important;
+}
+.focus-within\:outline-none:focus-within {
+	outline: 2px solid transparent;
+	outline-offset: 2px;
 }
 .hover\:bg-indigo-700:hover {
 	--tw-bg-opacity: 1;
@@ -1152,6 +1275,18 @@ video {
 .hover\:bg-indigo-800:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 48, 163, var(--tw-bg-opacity));
+}
+.hover\:bg-gray-400:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
+.hover\:bg-gray-100:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+.hover\:bg-gray-50:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
 .hover\:text-gray-900:hover {
 	--tw-text-opacity: 1;
@@ -1204,11 +1339,6 @@ video {
 		margin-right: 2rem;
 	}
 
-	.md\:mx-2 {
-		margin-left: 0.5rem;
-		margin-right: 0.5rem;
-	}
-
 	.md\:mx-3 {
 		margin-left: 0.75rem;
 		margin-right: 0.75rem;
@@ -1236,6 +1366,10 @@ video {
 
 	.md\:w-full {
 		width: 100%;
+	}
+
+	.md\:w-12 {
+		width: 3rem;
 	}
 
 	.md\:flex-row {
@@ -1369,12 +1503,5 @@ video {
 	.lg\:text-xl {
 		font-size: 1.25rem;
 		line-height: 1.75rem;
-	}
-}
-@media (min-width: 1280px) {
-
-	.xl\:mx-auto {
-		margin-left: auto;
-		margin-right: auto;
 	}
 }
