--- a/css/style.css
+++ b/css/style.css
@@ -676,6 +676,16 @@ video {
 	margin-right: 0.5rem;
 }
 
+.mx-6 {
+	margin-left: 1.5rem;
+	margin-right: 1.5rem;
+}
+
+.mx-8 {
+	margin-left: 2rem;
+	margin-right: 2rem;
+}
+
 .mr-6 {
 	margin-right: 1.5rem;
 }
@@ -1226,6 +1236,11 @@ video {
 	color: rgba(99, 102, 241, var(--tw-text-opacity));
 }
 
+.text-indigo-900 {
+	--tw-text-opacity: 1;
+	color: rgba(49, 46, 129, var(--tw-text-opacity));
+}
+
 .text-opacity-80 {
 	--tw-text-opacity: 0.8;
 }
@@ -1312,6 +1327,10 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
+.hover\:text-indigo-800:hover {
+	--tw-text-opacity: 1;
+	color: rgba(55, 48, 163, var(--tw-text-opacity));
+}
 @media (min-width: 640px) {
 
 	.sm\:mx-8 {
@@ -1342,6 +1361,11 @@ video {
 	.md\:mx-3 {
 		margin-left: 0.75rem;
 		margin-right: 0.75rem;
+	}
+
+	.md\:my-4 {
+		margin-top: 1rem;
+		margin-bottom: 1rem;
 	}
 
 	.md\:block {
