--- a/css/style.css
+++ b/css/style.css
@@ -955,6 +955,10 @@ select {
 	width: 1rem;
 }
 
+.w-1\/2 {
+	width: 50%;
+}
+
 .w-96 {
 	width: 24rem;
 }
@@ -969,10 +973,6 @@ select {
 
 .w-1\/3 {
 	width: 33.333333%;
-}
-
-.w-1\/2 {
-	width: 50%;
 }
 
 .max-w-screen-2xl {
@@ -1070,6 +1070,10 @@ select {
 
 .border {
 	border-width: 1px;
+}
+
+.border-0 {
+	border-width: 0px;
 }
 
 .border-t-2 {
@@ -1191,11 +1195,6 @@ select {
 	padding-right: 1.25rem;
 }
 
-.py-6 {
-	padding-top: 1.5rem;
-	padding-bottom: 1.5rem;
-}
-
 .py-2 {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
@@ -1209,6 +1208,11 @@ select {
 .py-8 {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
+}
+
+.py-6 {
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 }
 
 .py-16 {
@@ -1229,8 +1233,12 @@ select {
 	padding-bottom: 2.5rem;
 }
 
-.pt-28 {
-	padding-top: 7rem;
+.pt-32 {
+	padding-top: 8rem;
+}
+
+.pt-20 {
+	padding-top: 5rem;
 }
 
 .pl-1 {
@@ -1239,14 +1247,6 @@ select {
 
 .pr-2 {
 	padding-right: 0.5rem;
-}
-
-.pt-40 {
-	padding-top: 10rem;
-}
-
-.pt-32 {
-	padding-top: 8rem;
 }
 
 .text-center {
@@ -1720,11 +1720,6 @@ select {
 		justify-content: space-between;
 	}
 
-	.lg\:px-6 {
-		padding-left: 1.5rem;
-		padding-right: 1.5rem;
-	}
-
 	.lg\:py-20 {
 		padding-top: 5rem;
 		padding-bottom: 5rem;
@@ -1735,12 +1730,12 @@ select {
 		padding-bottom: 1.5rem;
 	}
 
-	.lg\:pt-32 {
-		padding-top: 8rem;
-	}
-
 	.lg\:pl-12 {
 		padding-left: 3rem;
+	}
+
+	.lg\:pt-32 {
+		padding-top: 8rem;
 	}
 
 	.lg\:text-left {
